<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Welcome Basket Players</string>
    <string name="app_name">Stats Basket</string>
    <string name="txt_version">Version 1.1</string>
    <string name="txt_user_id">R.Lapointe</string>
    <string name="bt_about">About</string>
    <string name="txt_about_message">This application is developed by %1$s\n%2$s</string>
    <string name="bt_start">Start</string>
    <string name="bt_stop">Stop</string>
    <string name="bt_end">End</string>
    <string name="bt_reset">Reset</string>
    <string name="bt_exit">Exit</string>
    <string name="club_A">A</string>
    <string name="club_B">B</string>
    <string name="bt_category_mgt">Category</string>
    <string name="bt_club_mgt">Club</string>
    <string name="bt_team_mgt">Team</string>
    <string name="bt_player_mgt">Player</string>
    <string name="bt_ok_club">OK</string>
    <string name="bt_ok_team">OK</string>
    <string name="txt_exclu_tmp">Exclusion of which player for team %1$s</string>
    <string name="txt_give_club">Please give the club %1$s name</string>
    <string name="txt_club_non_init">The club name are not initialized, do you want to continue ?</string>
    <string name="confirm_st">Confirm</string>
    <string name="quit_st">Exit</string>
    <string name="quit_confirm_st">Do you confirm to exit ?</string>
    <string name="delete_st">Delete</string>
    <string name="deleted_records">%1$s %2$s(s) deleted</string>
    <string name="deleted_no_record">No %1$s deleted</string>
    <string name="deleted_canceled">Deletion canceled</string>
    <string name="delete_confirm_st">Do you confirm to delete this element ?</string>
    <string name="yes_st">Yes</string>
    <string name="no_st">NO</string>
    <string name="ok_st">OK</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_avert">Yellow</string>
    <string name="bt_exclu_tmp">2 min</string>
    <string name="bt_exclu_def">Red</string>
    <string name="bt_shoot_1p">1 pt</string>
    <string name="bt_shoot_2p">2 pt</string>
    <string name="bt_shoot_3p">3 pt</string>
    <string name="bt_scoring_table">Scoring table</string>
    <string name="bt_scoring_hand">Handball</string>
    <string name="bt_scoring_basket">Basket</string>
    <string name="bt_scoring_sample">Sample</string>
    <string name="bt_score_sheet">Score sheet</string>
    <string name="bt_save_match">Save match</string>
    <string name="bt_preferences">Preferences</string>
    <string name="bt_sport_management">Teams management</string>
    <string name="bt_database_management">Database management</string>
    <string name="bt_save_database">Save database</string>
    <string name="bt_rest_database">Restore database</string>
    <string name="bt_raz_database">RAZ database</string>
    <string name="bt_export_database">Export database</string>
    <string name="bt_import_database">Import database</string>
    <string name="bt_list_categories">Categories list</string>
    <string name="bt_add_category">Add category</string>
    <string name="bt_list_clubs">Clubs list</string>
    <string name="bt_add_club">Add club</string>
    <string name="bt_list_teams">Teams list</string>
    <string name="bt_add_team">Add team</string>
    <string name="bt_list_players">Players list</string>
    <string name="bt_add_player">Add player</string>
    <string name="bt_list_matchs">Matches list</string>
    <string name="bt_add_match">Add match</string>
    <string name="txt_category_title">Category</string>
    <string name="txt_category_name">Name</string>
    <string name="txt_category_gender">Gender</string>
    <string name="txt_category_agemini">Age mini</string>
    <string name="txt_category_agemaxi">Age maxi</string>
    <string name="category_prompt">Choose a category</string>
    <string name="gender_prompt">Choose a gender</string>
    <string name="txt_club_title">Club</string>
    <string name="txt_club_name">Name</string>
    <string name="txt_club_number">Number</string>
    <string name="txt_club_town">Town</string>
    <string name="club_prompt">Choose a club</string>
    <string name="txt_club_message">Please give a name for club %1$s</string>
    <string name="txt_team_title">Team</string>
    <string name="txt_team_name">Name</string>
    <string name="txt_team_categ">Category</string>
    <string name="txt_team_club">Club</string>
    <string name="txt_team_sport">Sport</string>
    <string name="txt_team_players">Players</string>
    <string name="team_prompt">Choose a team</string>
    <string name="sport_prompt">Choose a sport</string>
    <string name="txt_player_title">Player</string>
    <string name="txt_player_name">Name</string>
    <string name="txt_player_firstname">First name</string>
    <string name="txt_player_categ">Category</string>
    <string name="txt_player_club">Club</string>
    <string name="txt_player_birhtday">Birthday</string>
    <string name="txt_player_license">License</string>
    <string name="txt_player_bib_number">Bib</string>
    <string name="txt_player_in_play">Play</string>
    <string name="txt_player_captain">Captain</string>
    <string name="txt_player_goal">Goal</string>
    <string name="txt_player_coach">Coach</string>
    <string name="txt_player_doctor">Doctor</string>
    <string name="txt_player_kine">Kine</string>
    <string name="player_prompt">Choose a player</string>
    <string name="txt_match_title">Match</string>
    <string name="txt_match_ref">Reference</string>
    <string name="txt_match_club_a">Club A</string>
    <string name="txt_match_club_b">Club B</string>
    <string name="txt_match_date">Date</string>
    <string name="bt_match_date">Date</string>
    <string name="txt_match_hour">Hour</string>
    <string name="txt_match_location">Location</string>
    <string name="match_prompt">Choose a match</string>
    <string name="txt_match_message">Please give a reference for match %1$s</string>
    <string name="pref_sports_list_title">Sports</string>
    <string name="pref_sports_list_message">Choose a sport</string>
    <string name="pref_sports_list_sum">Selected sport</string>
    <string name="pref_period_duration_title">Period duration</string>
    <string name="pref_period_duration_sum">Period duration given in minutes</string>
    <string name="pref_period_duration_message">Please enter the period duration in minutes</string>
    <string name="pref_pause_duration_title">Pause duration</string>
    <string name="pref_pause_duration_sum">Pause duration given in minutes</string>
    <string name="pref_pause_duration_message">Please enter the pause duration in minutes</string>
    <string name="pref_exclu_duration_title">Exclusion duration</string>
    <string name="pref_exclu_duration_sum">Exclusion duration given in minutes</string>
    <string name="pref_exclu_duration_message">Please enter the exclusion duration in minutes</string>
    <string name="pref_inter_duration_title">Inter period duration</string>
    <string name="pref_inter_duration_sum">Inter period duration given in minutes</string>
    <string name="pref_inter_duration_message">Please enter the pause duration between two periods in minutes</string>
    <string name="pref_nb_period_title">Number of periods</string>
    <string name="pref_nb_period_sum">Number of periods</string>
    <string name="pref_nb_period_message">Please enter the number of periods</string>
    <string name="Error">Error</string>
    <string name="StrangeErr">If you can reproduce this error please tell me
	    by mail how to provoke it ;-)
	    \nYou can also use aLogViewer to extract extra informations
	    from the system log to help me to find out what is going wrong.</string>
    <string name="NotAnArror">Not an error</string>
    <string name="Normal">Normal</string>
    <string name="Root">Root</string>
    <string name="NoResult">No result</string>
    <string name="Export">Export database</string>
    <string name="Restore">Restore database</string>
    <string name="Cancel">Cancel</string>
    <string name="ExportData">Export</string>
    <string name="NoExportToRestore">No export to restore</string>
    <string name="txt_dialog_input">Any input</string>

    <string name="msg_no_club">At least one club must be created before the creation of a player.</string>
    <string name="tit_no_club">No club found</string>

    <string name="txt_nb_3pt">3pt</string>
    <string name="txt_nb_2pt">2pt</string>
    <string name="txt_nb_lancer_franc">L.F</string>
    <string name="txt_nb_faute">fte</string>

    <string name="txt_score_nul">00</string>
    <string name="txt_time_nul">0:00</string>
    <string name="bt_pause_init">T</string>
    <string name="bt_goal">Goal</string>
    <string name="bt_stop_goal">Shot stop</string>
    <string name="bt_goal_7m">Goal 7m</string>
    <string name="bt_stop_goal_7m">Stop 7m</string>
    <string name="bt_walk">Walk</string>
    <string name="bt_dribble">Dribble</string>
    <string name="bt_zone">Zone</string>
    <string name="bt_ball_lost">Ball lost</string>
    <string name="txt_exclu_init">.</string>
    <string name="txt_period_init">1</string>

</resources>