<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/txt_player_name"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:text="@string/txt_player_title" >
    </TextView>

    <TextView
        android:id="@+id/txt_player_num"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="2dip"
        android:text="@string/txt_period_init" >
    </TextView>

    <TextView
        android:id="@+id/txt_player_faults"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="2dip"
        android:text="@string/txt_score_nul" >
    </TextView>

    <TextView
        android:id="@+id/txt_player_points"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="2dip"
        android:text="@string/txt_score_nul" >
    </TextView>

    <Button
        android:id="@+id/bt_shoot_1p"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bt_shoot_1p" >
    </Button>

    <Button
        android:id="@+id/bt_shoot_2p"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bt_shoot_2p" >
    </Button>

    <Button
        android:id="@+id/bt_shoot_3p"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bt_shoot_3p" >
    </Button>


</LinearLayout>
