<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
        <Button
            android:id="@+id/bt_add_club"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_add_club" />

        <Button
            android:id="@+id/bt_add_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_add_team" />

        <Button
            android:id="@+id/bt_add_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_add_player" />

        <Button
            android:id="@+id/bt_add_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_add_match" />

    </LinearLayout>

 	<ListView
	    android:id="@+id/list_teams"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	</ListView>

</LinearLayout>